wordpress/templates/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: "Always"
      containers:
        - name: wordpress
          image: wordpress:6.7-fpm
          securityContext:
            runAsUser: 33
            runAsGroup: 33
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 9000  # FPM default port
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
          livenessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 180
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 10
          readinessProbe:
            tcpSocket:
              port: 9000
            initialDelaySeconds: 150
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 10
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
