wordpress/templates/mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-network-policy
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: wordpress  # Allow ingress from WordPress pod
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: wordpress  # Allow egress to WordPress pod
