wordpress/templates/wordpress-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: wordpress-network-policy
  namespace: wordpress
spec:
  podSelector:
    matchLabels:
      app: wordpress
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mysql  # Allow ingress traffic from MySQL pods
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: mysql  # Allow egress traffic to MySQL pods
